update: rename project, because loop is reserved in many languages
