# protocol/openapi.yaml
@@ -36,7 +36,7 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/loop.api.PublishReply'
+                                $ref: '#/components/schemas/loopin.api.PublishReply'
     /hub/api/rpc:
         get:
             tags:
@@ -70,13 +70,13 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/loop.api.RPCReply'
+                                $ref: '#/components/schemas/loopin.api.RPCReply'
 components:
     schemas:
-        loop.api.PublishReply:
+        loopin.api.PublishReply:
             type: object
             properties: {}
-        loop.api.RPCReply:
+        loopin.api.RPCReply:
             type: object
             properties:
                 id:
@@ -84,11 +84,11 @@ components:
                 method:
                     type: string
                 error:
-                    $ref: '#/components/schemas/loop.api.RPCReply_Error'
+                    $ref: '#/components/schemas/loopin.api.RPCReply_Error'
                 payload:
                     type: string
                     format: bytes
-        loop.api.RPCReply_Error:
+        loopin.api.RPCReply_Error:
             type: object
             properties:
                 error:
